In "Erfolgen" werden jetzt die erledigten Termine untereinander angezeigt. Falls ein Bild vorhanden ist, wird dieses ebenefalls mit angezeigt. Daher wurde die Tabelle für den Tagesplan um eine Spalte für die Bild Uri erweitert. Somit muss nicht das ganze Bild abgespeichert werden. (Es muss noch hinzugefügt werden, was passiert wenn das Bild in der Gallerie gelöscht wurde) Man bekommt als erstes die Erfolge des aktuellen Tages angezeigt, kann aber auch mit zwei Buttens die vorherigen und folgenden Tage anzeigen lassen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,8 @@
     <string name="welcome_messages_login">Hi, %1$s!\nWilkommen zurück bei Daily Buddy.</string>
     <string name="registrations_instruction">Hier neu registrieren:</string>
     <string name="already_registrated_message">Du bist schon registriert!</string>
+    <string name="add_picture_to_activity_text">Bild hinzufügen</string>
+    <string name="successes_back_button_sign"><![CDATA[<-]]></string>
+    <string name="successes_next_button_sign"><![CDATA[->]]></string>
 
 </resources>
