--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">tagesstruktur</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="app_name">DailyBuddy</string>
+    <string name="title_activity_main">DailyBuddy</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -20,7 +20,7 @@
     <string name="Button_plan_erstellung">Erstelle mir meinen Plan!</string>
     <string name="wrong_password_login_message">Falsches Password</string>
     <string name="not_identical_passwords_registration_message">Passwörter sind nicht identisch!</string>
-    <string name="login_button_label">Login</string>
+    <string name="login_button_label">Registrieren</string>
     <string name="registrate_login_label">Registrieren</string>
     <string name="welcome_registration_title">Wilkommen\n bei Daily Buddy</string>
     <string name="welcome_messages_login">Hi, %1$s!\nWilkommen zurück bei Daily Buddy.</string>
@@ -29,5 +29,22 @@
     <string name="add_picture_to_activity_text">Bild hinzufügen</string>
     <string name="successes_back_button_sign"><![CDATA[<-]]></string>
     <string name="successes_next_button_sign"><![CDATA[->]]></string>
+    <string name="name_hint_registration">Name</string>
+    <string name="no_name_toast_message">Bitte tragen einen Namen ein!</string>
+    <string name="login_datafile_name">login</string>
+    <string name="color_theme_datafile_name">color_theme</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+
+    <string name="home_second">Home Second</string>
 
 </resources>
